Added "transparent" UI to Android client. This is essentially no UI whatsoever: Touch input is directly forwarded to the server with absolute pointer position. Simply put: You touch on position A means you click whatever is at position A.

--- a/deps.src/Makefile.android
+++ b/deps.src/Makefile.android
@@ -10,7 +10,7 @@ TOOLCHAIN_ABI	= armeabi-v7a
 LINKSTL		= shared
 HAS_NEON	= yes
 TARGET_PLATFORM	= android-9
-NDK_ROOT	= $(HOME)/android/android-ndk/.
+NDK_ROOT	?= $(HOME)/android/android-ndk/.
 
 TARGET		= arm-linux
 TARGET_VPX	= armv7-android-gcc
